--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json-server": "json-server --watch cart_db.json -p 3001"
+    "eject": "react-scripts eject"
+    // "json-server": "json-server --watch cart_db.json -p 3001"
   },
   "eslintConfig": {
     "extends": [
